package top.lizhistudio.autolua;

public interface AutoLuaEngine extends LuaInterpreter {
    void exit();
}
