package top.lizhistudio.autolua.rpc;

interface Callback {
}
